--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="./css/bootstrap-5.3.2/dist/css/bootstrap.min.css"
-    />
-    <script src="./css/bootstrap-5.3.2/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <script defer src="./css/bootstrap-5.3.2/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <header class="header"><%- include ("partials/header") %></header>
+    <p class="p">erkgjjhjhrdg</p>
     <img src="<%=silka%>" alt="" srcset="" />
+    <footer class="footer"><%- include ("partials/footer") %></footer>
   </body>
 </html>
