--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,20 +1,40 @@
-.p {
-  font-size: 100px;
+.test {
+  color: red;
 }
 
 .btn-outline-success {
-  --bs-btn-color: #130c9e;
-  --bs-btn-border-color: #193387;
+  --bs-btn-color: #198754;
+  --bs-btn-border-color: #198754;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #192087;
-  --bs-btn-hover-border-color: #193187;
+  --bs-btn-hover-bg: #6be028;
+  --bs-btn-hover-border-color: #198754;
   --bs-btn-focus-shadow-rgb: 25, 135, 84;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #201987;
-  --bs-btn-active-border-color: #2b1987;
+  --bs-btn-active-bg: #198754;
+  --bs-btn-active-border-color: #198754;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #878019;
+  --bs-btn-disabled-color: #198754;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #198754;
   --bs-gradient: none;
+}
+
+.register-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15vh;
+}
+.register-content div {
+  max-width: 1000px;
+}
+
+.login-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 22vh;
+}
+.login-content div {
+  max-width: 1000px;
 }/*# sourceMappingURL=index.css.map */
