--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bootstrap.css" />
-    <script defer src="./css/bootstrap-5.3.2/dist/js/bootstrap.min.js"></script>
+    <script defer src="css/bootstrap-5.3.2/dist/js/bootstrap.js"></script>
     <link rel="stylesheet" href="./css/index.css" />
-    <title>Document</title>
+    <title>Error</title>
   </head>
   <body>
-    <header class="header"><%- include ("partials/header") %></header>
-    <p class="p">erkgjjhjhrdg</p>
-    <img src="<%=silka%>" alt="" srcset="" />
-    <footer class="footer"><%- include ("partials/footer") %></footer>
+    <header class="header"><%- include("partiels/header") %></header>
+    <p class="p">ЭТО ПРОСТО ТЕКСТ</p>
+    <img src="<%=photo%>" />
+    <footer class="footer"><%- include("partiels/footer") %></footer>
   </body>
 </html>
