--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -7,6 +7,9 @@
     <title><%= title %></title>
   </head>
   <body>
-    <p>dsgsergerhserhsrthrsth</p>
+    <header><%- include('./partials/header'); %></header>
+    <div class="container"><%- ("./partials/menu")%></div>
+    <p class="card-text">тут контент</p>
+    <footer><%- include('./partials/footer')%></footer>
   </body>
 </html>
