--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -16,18 +16,37 @@
     <div class="card entry" style="width: 66rem;">
         <div class="card-body ">
           <h5 class="card-title"><%= entry.title %></h5>
-        
         <p class="card-text">
-            <%= entry.content %> 
-            
+            <%= entry.content %>   
         </p>
     </br>
     <h6>Запостил :   <%= entry.username %> </h6>
+    <% if(locals.user){ %>
+        <a href="/update/<%= entry.id %>" class="btn-update">
+            <i class="fa-solid fa-pen-to-square">update</i>
+        </a>
+    <button class="btn-delete" data-id="<%=entry.id%>">
+            <i class="fas fa-trash-alt" data-id="<%=entry.id%>">delete</i>
+    </button>
+        <%}%>
+
         </div>
     </div> 
     </br>
 <%}) %>
 </div>
+<script>
+    document.addEventListener('click', (e)=>{
+    const id = e.target?.dataset?.id || null
+    if(id){
+        fetch(`/${id}`, {
+            method: 'DELETE'
+        }).then(()=>{
+            window.location.reload()
+        })
+    }
+})
+</script>
 <footer><%- include('./partials/footer')%></footer>
 </body>
 </html>
