--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -1,67 +1,67 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-  <head> 
-    <meta charset="UTF-8" /> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-    <title><%= title %></title> 
-  </head> 
-  <body> 
-    <header class="header"><%- include("partials/header") %></header> 
-    <section class="login-content"> 
-        <div class="container-fluid"> 
-        <h1 class="text-center">Авторизация</h1> 
-        <form action="#" method="post" class="p-3"> 
-          <div class="row g-2 g-5"> 
-            <div class="col-12"> 
-              <div class="form-floating mb-3"> 
-                <input 
-                  type="email" 
-                  name="loginForm[email]" 
-                  class="form-control" 
-                  id="validationCustom01" 
-                  placeholder="name@email.com" 
-                  required="" 
-                /> 
-                <label for="validationCustom01">Email</label> 
-                <div class="invalid-feedback"> 
-                  Пожалуйста, введите ваш email. 
-                </div> 
-              </div> 
-            </div> 
-          </div> 
-   
-          <div class="row g-2 g-5"> 
-            <div class="col-12"> 
-              <div class="form-floating mb-3"> 
-                <input 
-                  type="password" 
-                  name="loginForm[password]" 
-                  class="form-control pas" 
-                  id="validationCustomPas" 
-                  placeholder="Введите пароль" 
-                  required="" 
-                /> 
-                <label for="validationCustomPas">Введите пароль</label> 
-                <div class="invalid-feedback"> 
-                  Пожалуйста, введите ваш пароль. 
-                </div> 
-              </div> 
-              <label class="form"><input type="checkbox" class="password-checkbox" onclick="showAndHidePas()"> Показать пароль</label>   
-            </div> 
-          </div> 
-          <div class="row mt-3"> 
-            <div class="col-12 col-sm-4 align-items-center"> 
-              <button type="submit" class="btn btn-info  ">Войти</button> 
-            </div> 
-          </div> 
-          <div class="row g-2 g-5"> 
-            <div class="col-12 col-sm-6"> 
-              <a href="register" class="text-decoration-none">У вас нет аккаунта? Регистрация</a> 
-            </div> 
-          </div> 
-        </form> 
-      </section> 
-    <footer><%- include('./partials/footer')%></footer> 
-  </body> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= title %></title>
+  </head>
+  <body>
+    <header class="header"><%- include("partials/header") %></header>
+    <section class="login-content">
+        <div class="container-fluid">
+        <h1 class="text-center">Авторизация</h1>
+        <form action="#" method="post" class="p-3">
+          <div class="row g-2 g-5">
+            <div class="col-12">
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  name="LoginForm[email]"
+                  class="form-control"
+                  id="validationCustom01"
+                  placeholder="name@email.com"
+                  required=""
+                />
+                <label for="validationCustom01">Email</label>
+                <div class="invalid-feedback">
+                  Пожалуйста, введите ваш email.
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="row g-2 g-5">
+            <div class="col-12">
+              <div class="form-floating mb-3">
+                <input
+                  type="password"
+                  name="LoginForm[password]"
+                  class="form-control pas"
+                  id="validationCustomPas"
+                  placeholder="Введите пароль"
+                  required=""
+                />
+                <label for="validationCustomPas">Введите пароль</label>
+                <div class="invalid-feedback">
+                  Пожалуйста, введите ваш пароль.
+                </div>
+              </div>
+              <label class="form"><input type="checkbox" class="password-checkbox" onclick="showAndHidePas()"> Показать пароль</label>  
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-12 col-sm-4 align-items-center">
+              <button type="submit" class="btn btn-info  ">Войти</button>
+            </div>
+          </div>
+          <div class="row g-2 g-5">
+            <div class="col-12 col-sm-6">
+              <a href="register" class="text-decoration-none">У вас нет аккаунта? Регистрация</a>
+            </div>
+          </div>
+        </form>
+      </section>
+    <footer><%- include('./partials/footer')%></footer>
+  </body>
 </html>
