--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -21,13 +21,13 @@
         </p>
     </br>
     <h6>Запостил :   <%= entry.username %> </h6>
-    <% if(locals.user){ %>
+    <% if(locals.admin){ %>
         <a href="/update/<%= entry.id %>" class="btn-update">
             <i class="fa-solid fa-pen-to-square">update</i>
         </a>
-    <button class="btn-delete" data-id="<%=entry.id%>">
-            <i class="fas fa-trash-alt" data-id="<%=entry.id%>">delete</i>
-    </button>
+        <a href="/delete/<%= entry.id %>" class="btn-delete">
+            <i class="fas fa-trash-alt" ></i>
+        </a>
         <%}%>
 
         </div>
@@ -35,18 +35,6 @@
     </br>
 <%}) %>
 </div>
-<script>
-    document.addEventListener('click', (e)=>{
-    const id = e.target?.dataset?.id || null
-    if(id){
-        fetch(`/${id}`, {
-            method: 'DELETE'
-        }).then(()=>{
-            window.location.reload()
-        })
-    }
-})
-</script>
 <footer><%- include('./partials/footer')%></footer>
 </body>
 </html>
