--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <script defer src="./css/bootstrap-5.3.2/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./css/index.css" />
     <title><%= title %></title>
   </head>
   <body>
@@ -67,7 +70,18 @@
                 </div>
               </div>
             </div>
-            <div class="row mt-3">
+            <div class="row g-2 g-">
+              <div class="col-12 col-sm-6">
+                <div class="form-check">
+                  <label class="form-check-label" for="isAdmin">
+                    Вы админ?
+                  </label>
+                  <input class="form-check-input" type="checkbox" value="1" id="isAdmin" name="isAdmin">
+                </div>
+                
+              </div>
+            </div>
+            <div class="row">
               <div class="col-12 col-sm-4">
               <button type="submit" class="btn btn-info">Регистрация</button>
               </div>
