--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -37,6 +37,6 @@
         </br>
     <% }) %> 
     </div>
-    <footer><%- include ('./partials/footer') %></footer>
+    <footer class="bg-dark "><%- include ('./partials/footer') %></footer>
 </body>
 </html>
