--- a/views/post.ejs
+++ b/views/post.ejs
@@ -40,6 +40,6 @@
         </button>
       </form>
     </div>
-    <footer><%- include ('./partials/footer') %></footer>
+    <footer class="bg-dark"><%- include ('./partials/footer') %></footer>
   </body>
 </html>
