--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -59,6 +59,11 @@
           <div class="row mt-3"> 
             <div class="col-12 col-sm-4 align-items-center"> 
               <button type="submit" class="btn btn-info  ">Войти</button> 
+            </div>
+            <div class="container">
+              <a href="/auth/yandex">
+                <button class="primary">yandex</button>
+              </a>
             </div> 
           </div> 
           <div class="row g-2 g-5"> 
@@ -70,7 +75,7 @@
       </section> 
     <footer><%- include('./partials/footer')%></footer> 
   </body> 
-</html><!DOCTYPE html> 
+<!-- </html><!DOCTYPE html> 
 <html lang="en"> 
   <head> 
     <meta charset="UTF-8" /> 
@@ -132,6 +137,11 @@
             <div class="col-12 col-sm-4 align-items-center"> 
               <button type="submit" class="btn btn-info  ">Войти</button> 
             </div> 
+            <div class="container">
+              <a href="/auth/yandex">
+                <button class="primary">yandex</button>
+              </a>
+            </div>
           </div> 
           <div class="row g-2 g-5"> 
             <div class="col-12 col-sm-6"> 
@@ -142,4 +152,4 @@
       </section> 
     <footer><%- include('./partials/footer')%></footer> 
   </body> 
-</html>
+</html> -->
